data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_734.wast
;; 5. **Test for Loop with Conditional Break on Condition Met**    - **Description**: Design a loop that breaks out using a `br_if` instruction when a specific condition (e.g., local variable equals a constant) is met.    - **Constraint Checked**: Ensures proper evaluation and break condition within the loop.    - **Incorrect Condition Evaluation**: Detects if the loop fails to break on a true condition or breaks incorrectly.

(assert_invalid
  (module 
    (func $test_loop_break (param $0 i32) (result i32)
      (local $1 i32)
      (local.set $1 (i32.const 5))
      (loop (result i32)
        (local.get $1)
        (i32.const 0)
        (i32.ne)
        (br_if 0)
        (local.get $0)
        (return)
      )
      (i32.const 42) 
    )
  )
  "type mismatch"
)